[gd_scene load_steps=16 format=2]

[ext_resource path="res://gfx/hero/run/hero_02.png" type="Texture" id=1]
[ext_resource path="res://scr/player.gd" type="Script" id=2]
[ext_resource path="res://scenes/arrow_scene.tscn" type="PackedScene" id=3]
[ext_resource path="res://gfx/hero/run/hero_05.png" type="Texture" id=4]
[ext_resource path="res://gfx/hero/run/hero_06.png" type="Texture" id=5]
[ext_resource path="res://gfx/hero/run/hero_04.png" type="Texture" id=7]
[ext_resource path="res://gfx/hero/run/hero_03.png" type="Texture" id=10]
[ext_resource path="res://gfx/hero/fall/fall_03.png" type="Texture" id=11]
[ext_resource path="res://gfx/hero/run/hero_01.png" type="Texture" id=12]
[ext_resource path="res://gfx/hero/fall/fall_02.png" type="Texture" id=13]
[ext_resource path="res://gfx/hero/stand/hero_0006_stand.png" type="Texture" id=14]
[ext_resource path="res://gfx/hero/fall/fall_01.png" type="Texture" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.9665, 31.6181 )

[sub_resource type="CapsuleShape2D" id=2]
height = 45.0715

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "stand",
"speed": 10.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 13 ), ExtResource( 11 ) ],
"loop": false,
"name": "fall",
"speed": 10.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 1 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [  ],
"loop": false,
"name": "jump",
"speed": 10.0
} ]

[node name="player" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )
arrow_scene = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="." groups=[
"player",
]]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="aniamated_sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 3 )
animation = "jump"

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="shoot_position" type="Position2D" parent="."]
position = Vector2( 17.4578, -2.69614 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
